[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/pipe.png" type="Texture" id=1]
[ext_resource path="res://scripts/Pipe.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54.5, 100 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54.5, 100 )

[node name="PipesColumn" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="TopPipeSprite" type="Sprite" parent="."]
position = Vector2( 54.5, 100 )
texture = ExtResource( 1 )
flip_v = true
region_enabled = true
region_rect = Rect2( 0, 0, 109, 200 )

[node name="TopPipeCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 54.5, 100 )
shape = SubResource( 1 )

[node name="BottomPipeSprite" type="Sprite" parent="."]
position = Vector2( 54.5, 300 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 109, 200 )

[node name="BottomPipeCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 54.5, 300 )
shape = SubResource( 2 )
